# harmonyparser

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
harmonyparser/: __init__.py  const.py  error.py  oldparser.py  parser.py
src/harmonyparser/: __init__.py  error.py  parser.py
test/: conftest.py  test_parser.py  test_samples.py
tests/: test_parser.py
tests/samples/: group_and_waypoint_21.xstage  new_scene_21.xstage
