[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmonyparser"
version = "0.0.1"
authors = [
  { name="Paul-Emile Buteau", email="paulemilebuteau@gmail.com"},
]
description = "A project file parser for Toon Boom Harmony"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Toon Boom", "Harmony", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://github.com/PaulEmileB/harmonyparser"
Issues = "https://github.com/PaulEmileB/harmonyparser/issues"